clusters/cluster-1/media/ombi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ombi
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ombi
  template:
    metadata:
      labels:
        app: ombi
    spec:
      containers:
      - name: ombi
        image: linuxserver/ombi:4.16.12 # {"$imagepolicy": "flux-system:ombi"}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3579
        volumeMounts:
        - name: ombi-config
          mountPath: /config
      volumes:
      - name: ombi-config
        persistentVolumeClaim:
          claimName: ombi-config-pvc
