clusters/cluster-1/media/reNgine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rengine
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rengine
  #strategy:
  #  type: Recreate
  template:
    metadata:
      labels:
        app: rengine
    spec:
      containers:
      - name: witnessme
        image: trithemius/rengine
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 443
        command: [ "sleep" ]
        args: [ "infinity" ]
