clusters/cluster-1/media/sonarr copy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr2
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr2
  #strategy:
  #  type: Recreate
  template:
    metadata:
      labels:
        app: sonarr2
    spec:
      containers:
      - name: sonarr
        image: linuxserver/sonarr:3.0.10 # {"$imagepolicy": "flux-system:sonarr"}
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /config
          name: frigate-config
          #mountPropagation: Bidirectional
      volumes:
      - name: frigate-config
        persistentVolumeClaim:
        claimName: frigate-config-pvc
