clusters/cluster-1/media/sonarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: linuxserver/sonarr:3.0.6 # {"$imagepolicy": "flux-system:sonarr"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: sonarr-config1
              mountPath: /config
            - name: sonarr-tv-nfs
              mountPath: /tv
            - name: sonarr-tv2-nfs
              mountPath: /tv2
              #mountPropagation: Bidirectional       
            - name: sonarr-tv3-nfs
              mountPath: /tv3
              #mountPropagation: Bidirectional
            - name: sonarr-downloads-complete
              mountPath: /downloads
      volumes:
        - name: sonarr-config1
          persistentVolumeClaim:
            claimName: sonarr-config-pvc
        - name: sonarr-tv-nfs
          persistentVolumeClaim:
            claimName: tvshows-pvc
        - name: sonarr-tv2-nfs
          persistentVolumeClaim:
            claimName: tvshows2-pvc
        - name: sonarr-tv3-nfs
          persistentVolumeClaim:
            claimName: tvshows3-pvc
        - name: sonarr-downloads-complete
          persistentVolumeClaim:
            claimName: downloads-complete-pvc

---
