clusters/cluster-1/media/tautulli.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tautulli
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tautulli
    spec:
      containers:
        - name: tautulli
          image: linuxserver/tautulli:2021.12.16 # {"$imagepolicy": "flux-system:tautulli"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8181
          volumeMounts:
            - name: tautulli-config1
              mountPath: /config
      volumes:
        - name: tautulli-config1
          persistentVolumeClaim:
            claimName: tautulli-config-pvc
