clusters/cluster-1/media/tallflix-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/from-to-www.redirect: "true"
    #kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "sonarr.tallflix.ca"
    - "radarr.tallflix.ca"
    - "www.tallflix.ca"
    - "stats.tallflix.ca"
    - "hass.tallflix.ca"
    - "sab.tallflix.ca"
    - "unifi.tallflix.ca"
    secretName: tls-secret 
  rules:
  - host: "sonarr.tallflix.ca"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sonarr
            port:
              number: 8989
  - host: "radarr.tallflix.ca"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: radarr
            port:
              number: 7878             
  - host: "www.tallflix.ca"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ombi
            port:
              number: 3579
  - host: "stats.tallflix.ca"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tautulli
            port:
              number: 8181
  - host: "sab.tallflix.ca"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sabnzbd
            port:
              number: 8080
